Changes for Sales/Finance split responsibilities

--- a/web.config
+++ b/web.config
@@ -22,7 +22,7 @@
   <httpRuntime targetFramework="4.5" />
   <httpModules />
  <!-- <authorization>
-      <allow roles="MobileAdmin" />
+      <allow roles="MobileAdmin, DPSales, DPFinance" />
       <deny users="*" /> 
     </authorization> -->
   </system.web>
@@ -49,6 +49,13 @@
   <appSettings>
   <add key="Telerik.ScriptManager.TelerikCdn" value="Disabled" />
   <add key="Telerik.StyleSheetManager.TelerikCdn" value="Disabled" />
-  
+
+    <!-- USPS Address Validation API -->
+    <add key="USPSAPIURL" value="https://secure.shippingapis.com/ShippingAPITest.dll"/>
+    <!--FOR TESTING -->
+    <!--<add key="USPSAPIURL" value="https://secure.shippingapis.com/ShippingAPI.dll"/> -->
+    <!--PRODUCTION UW4ARF.COM Only!!! -->
+    <add key="USPSAPIUserID" value="935ARFFI6902"/>
+    
   </appSettings>
 </configuration>
