--- a/web.config
+++ b/web.config
@@ -3,6 +3,8 @@
   <connectionStrings>
     <add name="ARF_Production" connectionString="Data Source=ARFSQL-FTL;Initial Catalog=ARF_Production;Persist Security Info=True;User ID=arfservice;Password=l1l@b0c" providerName="System.Data.SqlClient" />
     <add name="ARF_Prod_ConnStr" connectionString="Data Source=ARFSQL-FTL;Initial Catalog=ARF_Production;Persist Security Info=True;User ID=arfservice;Password=l1l@b0c" providerName="System.Data.SqlClient" />
+    <remove name="LocalSqlServer" />
+    <add name="LocalSqlServer" connectionString="Data Source=ARFSQL-FTL;Initial Catalog=ARF_Security;Persist Security Info=True;User ID=arfservice;Password=l1l@b0c" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
   <customErrors defaultRedirect="~/ErrorCustom.aspx" mode="RemoteOnly" /> 
@@ -21,10 +23,18 @@
     </httpHandlers>
   <httpRuntime targetFramework="4.5" />
   <httpModules />
+    
+    
  <!-- <authorization>
       <allow roles="MobileAdmin, DPSales, DPFinance" />
       <deny users="*" /> 
     </authorization> -->
+  <roleManager enabled="true" />
+  <authentication mode="Forms">
+    <forms loginUrl="login.aspx" defaultUrl="Secure_MobileAdmin\DPAppList.aspx" />
+  </authentication>
+  
+  
   </system.web>
   <system.webServer>
     <directoryBrowse enabled="false" />
@@ -47,15 +57,17 @@
   <modules runAllManagedModulesForAllRequests="true" />
   </system.webServer>
   <appSettings>
-  <add key="Telerik.ScriptManager.TelerikCdn" value="Disabled" />
-  <add key="Telerik.StyleSheetManager.TelerikCdn" value="Disabled" />
+  
+  
 
     <!-- USPS Address Validation API -->
-    <add key="USPSAPIURL" value="https://secure.shippingapis.com/ShippingAPITest.dll"/>
+    <add key="USPSAPIURL" value="https://secure.shippingapis.com/ShippingAPITest.dll" />
     <!--FOR TESTING -->
     <!--<add key="USPSAPIURL" value="https://secure.shippingapis.com/ShippingAPI.dll"/> -->
     <!--PRODUCTION UW4ARF.COM Only!!! -->
-    <add key="USPSAPIUserID" value="935ARFFI6902"/>
+    <add key="USPSAPIUserID" value="935ARFFI6902" />
+  <add key="Telerik.ScriptManager.TelerikCdn" value="Disabled" />
+  <add key="Telerik.StyleSheetManager.TelerikCdn" value="Disabled" />
     
   </appSettings>
 </configuration>
