--- a/web.config
+++ b/web.config
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <connectionStrings>
-    <add name="ARF_Production" connectionString="Data Source=ARFSQL-FTL;Initial Catalog=ARF_Production;Persist Security Info=True;User ID=arfservice;Password=l1l@b0c" providerName="System.Data.SqlClient" />
-    <add name="ARF_Prod_ConnStr" connectionString="Data Source=ARFSQL-FTL;Initial Catalog=ARF_Production;Persist Security Info=True;User ID=arfservice;Password=l1l@b0c" providerName="System.Data.SqlClient" />
+    <add name="ARF_Production" connectionString="Data Source=ORLV-SQL01;Initial Catalog=ARF_Production;Persist Security Info=True;User ID=arfservice;Password=l1l@b0c" providerName="System.Data.SqlClient" />
+    <add name="ARF_Prod_ConnStr" connectionString="Data Source=ORLV-SQL01;Initial Catalog=ARF_Production;Persist Security Info=True;User ID=arfservice;Password=l1l@b0c" providerName="System.Data.SqlClient" />
     <remove name="LocalSqlServer" />
-    <add name="LocalSqlServer" connectionString="Data Source=ARFSQL-FTL;Initial Catalog=ARF_Security;Persist Security Info=True;User ID=arfservice;Password=l1l@b0c" providerName="System.Data.SqlClient" />
+    <add name="LocalSqlServer" connectionString="Data Source=ORLV-SQL01;Initial Catalog=ARF_Security;Persist Security Info=True;User ID=arfservice;Password=l1l@b0c" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
   <customErrors defaultRedirect="~/ErrorCustom.aspx" mode="RemoteOnly" /> 
